--- a/Bank.html
+++ b/Bank.html
@@ -8,6 +8,6 @@
     for (var i = 1; i <= period; i++)
     {
 	    sumPer = sumPer*(1+percent/100);
-	    alert('Сумма вклада за ' + i  + ' год равна ' + parseInt(sumPer));
+	    alert('Сумма вклада за ' + i  + ' год равна ' + Math.floor(sumPer));
     }
 </script>
