--- a/Calculator.html
+++ b/Calculator.html
@@ -1,6 +1,13 @@
-<meta charset="x-UTF-16LE-BOM">
+<html>
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
 <script>
-    var a = parseInt(prompt('Введите число a'));
-    var b = parseInt(prompt('Введите число b'));
-    alert('Сумма  a и b равна ' + (a+b));
+	var a = parseInt(prompt('Р’РІРµРґРёС‚Рµ С‡РёСЃР»Рѕ a'));
+	var b = parseInt(prompt('Р’РІРµРґРёС‚Рµ С‡РёСЃР»Рѕ b'));
+	alert('РЎСѓРјРјР°  a Рё b СЂР°РІРЅР° ' + (a+b));
 </script>
+</body>
+</html>
+
