--- a/RussianRullet.html
+++ b/RussianRullet.html
@@ -1,21 +1,27 @@
-<meta charset="x-UTF-16LE-BOM">
+<html>
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
 <script>
 	var n = 0;
-	if (prompt('Сыграем? да/нет') == 'да')
+	if (prompt('РЎС‹РіСЂР°РµРј? РґР°/РЅРµС‚') == 'РґР°')
 	{
 		do
 		{
-			alert('Выстрел!')
+			alert('Р’С‹СЃС‚СЂРµР»!')
 			n++;
 			if (Math.random() * 5 < 1)
 			{
-				alert("Убит!");
+				alert("РЈР±РёС‚!");
 				break;
 			}
 		}
-		while (prompt('Повезло! Еще выстрел? да/нет') == 'да');
-		alert("Количество сделанных выстрелов: " + n);
+		while (prompt('РџРѕРІРµР·Р»Рѕ! Р•С‰Рµ РІС‹СЃС‚СЂРµР»? РґР°/РЅРµС‚') == 'РґР°');
+		alert("РљРѕР»РёС‡РµСЃС‚РІРѕ СЃРґРµР»Р°РЅРЅС‹С… РІС‹СЃС‚СЂРµР»РѕРІ: " + n);
 	}
 	else
-		alert("Игрок не стал стрелять");
+		alert("РРіСЂРѕРє РЅРµ СЃС‚Р°Р» СЃС‚СЂРµР»СЏС‚СЊ");
 </script>
+</body>
+</html>
