--- a/Bank.html
+++ b/Bank.html
@@ -1,13 +1,19 @@
-<meta charset="x-UTF-16LE-BOM">
+<html>
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
 <script>
-    var sum = parseInt(prompt('Введите сумму вклада'));
-    var percent = parseInt(prompt('Введите годовую процентрую ставку'));
-    var period = parseInt(prompt('На сколько лет хотите сделать вклад?'));
-    var sumPer = sum;
+	var sum = parseInt(prompt('Р’РІРµРґРёС‚Рµ СЃСѓРјРјСѓ РІРєР»Р°РґР°'));
+	var percent = parseInt(prompt('Р’РІРµРґРёС‚Рµ РіРѕРґРѕРІСѓСЋ РїСЂРѕС†РµРЅС‚СЂСѓСЋ СЃС‚Р°РІРєСѓ'));
+	var period = parseInt(prompt('РќР° СЃРєРѕР»СЊРєРѕ Р»РµС‚ С…РѕС‚РёС‚Рµ СЃРґРµР»Р°С‚СЊ РІРєР»Р°Рґ?'));
+	var sumPer = sum;
 
-    for (var i = 1; i <= period; i++)
-    {
-	    sumPer = sumPer*(1+percent/100);
-	    alert('Сумма вклада за ' + i  + ' год равна ' + Math.floor(sumPer));
-    }
+	for (var i = 1; i <= period; i++)
+	{
+		sumPer = sumPer*(1+percent/100);
+		alert('РЎСѓРјРјР° РІРєР»Р°РґР° Р·Р° ' + i  + ' РіРѕРґ СЂР°РІРЅР° ' + Math.floor(sumPer));
+	}
 </script>
+</body>
+</html>
