--- a/Calculator.html
+++ b/Calculator.html
@@ -4,9 +4,17 @@
 </head>
 <body>
 <script>
-	var a = parseInt(prompt('Введите число a'));
-	var b = parseInt(prompt('Введите число b'));
-	alert('Сумма  a и b равна ' + (a+b));
+	var a = prompt('Введите число a').trim();
+	while (isNaN(a) || !a)
+	{
+		a = prompt('Введено не число. Введите число a').trim();
+	}
+	var b = prompt('Введите число b').trim();
+	while (isNaN(b) || !b)
+	{
+		b = prompt('Введено не число. Введите число b').trim();
+	}
+	alert('Сумма a и b равна ' + (parseInt(a) + parseInt(b)));
 </script>
 </body>
 </html>
