--- a/Questions.html
+++ b/Questions.html
@@ -7,9 +7,7 @@
 	var count = 0;
 	var no = "неверно";
 	var yes = "верно";
-
-	var Z1 = prompt("Зимой и летом одним цветом");
-	if (Z1 == "елка")
+	if (prompt("Зимой и летом одним цветом") === "елка")
 	{
 		alert(yes);
 		count++;
@@ -18,9 +16,7 @@
 	{
 		alert(no);
 	}
-
-	var Z2 = prompt("Кто его раздевает, тот слезы проливает ");
-	if (Z2 == "лук")
+	if (prompt("Кто его раздевает, тот слезы проливает ") === "лук")
 	{
 		alert(yes);
 		count++;
